--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.46</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
